--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,10 +1,10 @@
 <!-- prettier-ignore -->
 {% extends "base.html" %}
 
-{% block title %}Hello!{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
 <div class="w-full">
-  <h1>Welcome to OpenAgents</h1>
+  <h1>{{ title }}</h1>
 </div>
 {% endblock %}
