--- a/templates/button.html
+++ b/templates/button.html
@@ -1,3 +1,4 @@
+{% macro nav_button(href, text) %}
 <a
   class="btn-nav bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center whitespace-nowrap select-none text-center align-middle no-underline outline-none w-full px-6 py-1 border border-white"
   href="{{ href }}"
@@ -7,3 +8,4 @@
   hx-select="#page-content"
   hx-swap="innerHTML show:top"
 >{{ text }}</a>
+{% endmacro %}
