--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <link href="/assets/main.css" rel="stylesheet" />
     <link href="/assets/fonts.css" rel="stylesheet" />
-    <title>{% block title %}{{ title }}{% endblock %}</title>
+    <title>{{title}}</title>
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     {% block head %}{% endblock %}
   </head>
