--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
-
-{% block content %}
-<div class="w-full">
-  <h1>{{title}}</h1>
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>{{title}}</title>
+</head>
+<body>
+    <h1>{{title}}</h1>
+</body>
+</html>
