--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{title}}</title>
-</head>
-<body>
-    <h1>{{title}}</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<h1>{{title}}</h1>
+{% endblock %}
