--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 <body class="fixed min-h-screen w-screen bg-black text-white font-mono">
     <div id="content" class="flex min-h-screen mx-auto">
         <div class="w-[60rem] m-6 px-4 border border-white">
+            {% include "header.html" %}
             {% block content %}{% endblock %}
         </div>
     </div>
