--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <link href="/assets/main.css" rel="stylesheet" />
-    <link href="/assets/fonts.css" rel="stylesheet" />
     <title>{{title}}</title>
-    <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 </head>
-<body class="fixed min-h-screen w-screen bg-black text-white font-mono">
-    <div id="content" class="flex min-h-screen mx-auto">
-        <div class="w-[60rem] m-6 px-4 border border-white">
-            {% include "header.html" %}
-            <div id="page-content">
-                <h1>{{title}}</h1>
-            </div>
-        </div>
-    </div>
+<body>
+    <h1>{{title}}</h1>
+    <a href="/" class="button">Home</a>
 </body>
 </html>
