--- a/templates/header.html
+++ b/templates/header.html
@@ -1,12 +1,10 @@
-{% macro nav_button(href, text, current_path) %}
-<a href="{{href}}" class="bg-black hover:bg-zinc-900 text-white text-xs inline-flex items-center justify-center gap-2 whitespace-nowrap select-none text-center align-middle no-underline outline-none px-6 py-1 border border-white" hx-get="{{href}}" hx-push-url="true" hx-target="#content" hx-swap="innerHTML">{{text}}{% if current_path == href %}<span class="nav-dot w-1.5 h-1.5 rounded-full bg-white"></span>{% endif %}</a>
-{% endmacro %}
+{% import "macros/nav.html" as nav %}
 
 <div class="grid grid-cols-3 lg:grid-cols-6 gap-4 py-4">
-{% call nav_button("/", "Home", path) %}
-{% call nav_button("/mobile-app", "Mobile App", path) %}
-{% call nav_button("/business", "Services", path) %}
-{% call nav_button("/video-series", "Video Series", path) %}
-{% call nav_button("/company", "Company", path) %}
-{% call nav_button("/contact", "Contact", path) %}
+{% call nav::nav_button("/", "Home", path) %}
+{% call nav::nav_button("/mobile-app", "Mobile App", path) %}
+{% call nav::nav_button("/business", "Services", path) %}
+{% call nav::nav_button("/video-series", "Video Series", path) %}
+{% call nav::nav_button("/company", "Company", path) %}
+{% call nav::nav_button("/contact", "Contact", path) %}
 </div>
