--- a/templates/header.html
+++ b/templates/header.html
@@ -3,8 +3,8 @@
 <div class="grid grid-cols-3 lg:grid-cols-6 gap-4 py-4">
 {% call nav::nav_button("/", "Home", path) %}
 {% call nav::nav_button("/mobile-app", "Mobile App", path) %}
-{% call nav::nav_button("/business", "Services", path) %}
 {% call nav::nav_button("/video-series", "Video Series", path) %}
+{% call nav::nav_button("/services", "Services", path) %}
 {% call nav::nav_button("/company", "Company", path) %}
 {% call nav::nav_button("/contact", "Contact", path) %}
 </div>
