--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/assets/main.css" rel="stylesheet" />
     <link href="/assets/fonts.css" rel="stylesheet" />
-    <title id="page-title">{{title}}</title>
+    <title id="page-title">OpenAgents - {{title}}</title>
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     <script>
         document.body.addEventListener('htmx:beforeSwap', function(evt) {
